# XHS-Scraper

./: .gitignore  COOKIE_EXTRACTION_GUIDE.md  DEPLOYMENT_GUIDE.md  DISTRIBUTION_SUMMARY.md  DOCUMENTATION_INDEX.md  ERROR_REFERENCE.md  FINAL_PROJECT_STATUS.md  FINAL_REPORT.txt  FIXES_SUMMARY.md  LICENSE  PROJECT_COMPLETION_REPORT.md  PROJECT_FINAL_CHECKLIST.md  README.md  RELEASE_NOTES.md  STATUS.txt  TESTING_GUIDE.md  TEST_RESULTS_REPORT.md  chrome_cookies.py  download_media.py  get_comments.py  get_note.py  get_user_info.py  get_user_notes.py  main.py  pyproject.toml  pytest.ini  qr_login.py  search_batch.py  verify_installation.py
.sisyphus/notepads/xhs-scraper-scripts-batch/: decisions.md  issues.md  learnings.md  problems.md
docs/: README_CN.md
tests/: .env.example  conftest.py
tests/integration/: README.md  test_api_responses.py  test_error_handling.py  test_scraper_clients.py
tests/unit/: test_exceptions.py  test_models.py  test_rate_limiter.py  test_signature.py
xhs_scraper/: __init__.py  client.py  exceptions.py  models.py  signature.py
xhs_scraper/scrapers/: comment.py  note.py  search.py  user.py
xhs_scraper/utils/: __init__.py  cookies.py  export.py  media.py  qr_login.py  qr_login.py.summary  rate_limiter.py  retry.py
